# JellyCram

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  getLibs.sh  icon.icns  version.sh  windows.cmake
.github/ISSUE_TEMPLATE/: bug-report---short-description-.md  bug-report.md  bug_report.md  feature-request.md
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml  butler-release.yml  release.yml
.gtihub/workflows/: build-macos.yml
android/: build.gradle  jellycram.prop  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/app/jerboa/jellycram/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  gameState.h  loop.h  main.cpp  util.h
android/app/src/main/cpp/scripts/: android_setup_lua.h  loop_lua.h  meshes_lua.h  setup_lua.h
android/app/src/main/java/app/jerboa/jellycram/: Hop.kt  MainActivity.kt
android/app/src/main/java/app/jerboa/jellycram/ViewModel/: Event.kt  renderViewModel.kt
android/app/src/main/java/app/jerboa/jellycram/composable/: about.kt  menu.kt  menuPrompt.kt  news.kt  renderScreen.kt  screen.kt  socials.kt
android/app/src/main/java/app/jerboa/jellycram/data/: GameState.kt
android/app/src/main/java/app/jerboa/jellycram/onlineServices/: Achievements.kt  Client.kt  InAppReview.kt  LeaderBoard.kt  Reward.kt
android/app/src/main/java/app/jerboa/jellycram/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
android/app/src/main/java/app/jerboa/jellycram/ui/view/: GLRenderer.kt  GLView.kt
android/app/src/main/java/app/jerboa/jellycram/utils/: glUtils.kt
android/app/src/main/res/drawable/: clears_leaderboard.xml  clears_leaderboard_dark.xml  games_achievements_dark.xml  games_controller_grey.xml  games_leaderboards_dark.xml  ic_launcher_foreground.xml  logo_dark.xml  menu_dark.xml  menu_dimiss_dark.xml  news.xml  score_leaderboard.xml  score_leaderboard_dark.xml  swap_theme.xml  swap_theme_dark.xml  time_leaderboard.xml  time_leaderboard_dark.xml
android/app/src/main/res/values/: achievements.xml  strings.xml
android/app/src/test/java/app/jerboa/jellycram/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
common/: ScriptzPacker  bordered.hmap  common.cpp  common.h  config.lua  gameState.cpp  gameState.h  icon.h  icon2.h  loop.lua  loop_lua.h  main.h  mesh.lua  meshes.lua  rand.cpp  rand.h  setup_lua.h  tessellate.lua  tutorial.h
common/include/: icon.h  logo.h.REMOVED.git-id  main.h
common/include/Collision/: cellList.h  collisionDetector.h  collisionMesh.h  collisionPrimitive.h  collisionResolver.h  quadTree.h  springDashpotResolver.h
common/include/Component/: cCollideable.h  cPhysics.h  cPolygon.h  cRenderable.h  cSound.h  cTransform.h  componentArray.h
common/include/Console/: LuaArray.h  LuaBool.h  LuaNumber.h  LuaString.h  LuaTable.h  LuaVec.h  console.h  lua.h  scriptz.h
common/include/Debug/: collisionMeshDebug.h
common/include/GL/: glew.h.REMOVED.git-id
common/include/Maths/: distance.h  polygon.h  rectangle.h  special.h  topology.h  transform.h  triangle.h  triangulation.h  vertex.h
common/include/Object/: entityComponentSystem.h  id.h  object.h
common/include/Shader/: marchingQuad.shader  meshDebug.shader  object.shader
common/include/System/: system.h  systemManager.h
common/include/System/Physics/: sCollision.h  sPhysics.h
common/include/System/Rendering/: sRender.h
common/include/System/Sound/: sSound.h  vorbis.h
common/include/Util/: sparseData.h  util.h  z.h
common/include/World/: boundary.h  fixedSource.h  mapFile.h  mapSource.h  marchingWorld.h  perlinSource.h  tile.h  tileWorld.h  world.h
common/include/miniaudio/: CHANGES.md  LICENSE.md  miniaudio.c  miniaudio.c.REMOVED.git-id  miniaudio.h
common/linux/: LICENSES.md  libHop-linux-x86_64.a.REMOVED.git-id  libjGL-linux-x86_64.a.REMOVED.git-id
common/macos/: icon.icns  libHop-macos.a.REMOVED.git-id  libjGL-macos.a.REMOVED.git-id  svg2icns.sh
common/windows/: CMakeLists.txt  libHop-windows.a.REMOVED.git-id  libjGL-windows.a.REMOVED.git-id  libstdc++-6.dll.REMOVED.git-id
common/windows/VulkanSDK/Include/vulkan/: vulkan_funcs.hpp.REMOVED.git-id  vulkan_profiles.hpp.REMOVED.git-id  vulkan_raii.hpp.REMOVED.git-id  vulkan_structs.hpp.REMOVED.git-id
common/windows/VulkanSDK/Windows/Lib/: libshaderc_combined.a.REMOVED.git-id
desktop/: CMakeLists.txt
desktop/include/: desktop.h  desktop_setup_lua.h  loop_lua.h  main.h  setup_lua.h
desktop/src/: main.cpp
